--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-scroll": "^1.7.16",
+    "react-scroll-section": "^1.3.0",
     "react-slick": "^0.25.2",
     "styled-components": "^4.4.1"
   },
