--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scroll": "^1.7.16",
     "react-scroll-section": "^1.3.0",
     "react-slick": "^0.25.2",
+    "react-spring": "^8.0.27",
     "styled-components": "^4.4.1"
   },
   "scripts": {
