--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "history": "^4.10.1",
     "pure-react-carousel": "^1.24.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.3.1",
     "react-scroll": "^1.7.16",
     "react-scroll-section": "^1.3.0",
     "react-slick": "^0.25.2",
