--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
+    "react-router-scroll-memory": "^2.0.5",
     "react-scripts": "^3.3.1",
     "react-slick": "^0.25.2",
     "react-spring": "^8.0.27",
