--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "pure-react-carousel": "^1.24.1",
     "react": "^16.12.0",
     "react-animate-on-scroll": "^2.1.5",
+    "react-cookie-consent": "^3.0.0",
     "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0",
     "react-responsive-carousel": "^3.1.51",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
