--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-hash-link": "^1.2.2",
     "react-router-scroll-memory": "^2.0.5",
     "react-scripts": "^3.3.1",
+    "react-share": "^4.0.1",
     "react-slick": "^0.25.2",
     "react-spring": "^8.0.27",
     "styled-components": "^4.4.1"
